Update Gaussian mixture notebook to use new version of highlight_points() function

--- a/code/Gaussian_mixture.ipynb
+++ b/code/Gaussian_mixture.ipynb
@@ -12,10 +12,13 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
     "from scipy.optimize import minimize\n",
     "from scipy.spatial.distance import cdist\n",
     "from scipy.stats import multivariate_normal as mvn\n",
+    "\n",
     "import seaborn as sns\n",
+    "\n",
     "import dcor\n",
     "\n",
     "from jax import grad\n",
@@ -747,7 +750,16 @@
    "execution_count": 37,
    "id": "59a7f913-1afa-46de-85bc-20dcf050d70f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/artem/git/stein_thinning/stein_thinning/thinning.py:126: UserWarning: log_q differs from log_p by more than 10 - consider using a proxy that matches the target better\n",
+      "  warnings.warn(f'log_q differs from log_p by more than {WEIGHT_SCALE_THRESHOLD} - consider using a proxy that matches the target better')\n"
+     ]
+    }
+   ],
    "source": [
     "idx_gf_laplace = thin_gf(sample, log_p, log_q_laplace, gradient_q_laplace, thinned_size)"
    ]
@@ -854,7 +866,14 @@
     "fig, axs = plt.subplots(n_rows, n_cols, figsize=(n_cols * 5, n_rows * 4));\n",
     "for i, (idx, title) in enumerate(entries):\n",
     "    ax = axs[i // 2][i % 2]\n",
-    "    highlight_points(sample, idx[:n_points_display], ax=ax)\n",
+    "    highlight_points(\n",
+    "        sample,\n",
+    "        idx[:n_points_display],\n",
+    "        coord_spec=[(0, 1)],\n",
+    "        axs=[ax],\n",
+    "        sample_point_color='grey',\n",
+    "        sample_point_size=None,\n",
+    "    )\n",
     "    ax.set_title(title);"
    ]
   },
@@ -933,7 +952,14 @@
     "axs = centered_subplots(fig, [2, 2, 1])\n",
     "for i, (idx, title) in enumerate(entries_report):\n",
     "    ax = axs[i]\n",
-    "    highlight_points(sample, idx[:n_points_display], ax=ax)\n",
+    "    highlight_points(\n",
+    "        sample,\n",
+    "        idx[:n_points_display],\n",
+    "        coord_spec=[(0, 1)],\n",
+    "        axs=[ax],\n",
+    "        sample_point_color='grey',\n",
+    "        sample_point_size=None,\n",
+    "    )\n",
     "    ax.set_title(title);\n",
     "    ax.set_xlabel('$x_1$');\n",
     "    ax.set_ylabel('$x_2$');\n",
@@ -1071,8 +1097,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 29.9 s, sys: 2.59 s, total: 32.5 s\n",
-      "Wall time: 50.2 s\n"
+      "CPU times: user 29 s, sys: 2.18 s, total: 31.2 s\n",
+      "Wall time: 31.6 s\n"
      ]
     }
    ],
@@ -1147,7 +1173,13 @@
     }
    ],
    "source": [
-    "highlight_points(sample, np.argsort(log_q)[:20])"
+    "highlight_points(\n",
+    "    sample,\n",
+    "    np.argsort(log_q)[:20],\n",
+    "    coord_spec=[(0, 1)],\n",
+    "    sample_point_color='grey',\n",
+    "    sample_point_size=None,\n",
+    ");"
    ]
   },
   {
@@ -1249,7 +1281,14 @@
     "titles = ['Standard Stein', 'Gradient-free with KDE', 'Gradient-free with weighted KDE']\n",
     "fig, axs = plt.subplots(1, 3, figsize=(15, 4))\n",
     "for i, km in enumerate(kmats):\n",
-    "    highlight_points(sample, np.argsort(np.abs(np.diag(km)))[:20], ax=axs[i])\n",
+    "    highlight_points(\n",
+    "        sample,\n",
+    "        np.argsort(np.abs(np.diag(km)))[:20],\n",
+    "        coord_spec=[(0, 1)],\n",
+    "        axs=[axs[i]],\n",
+    "        sample_point_color='grey',\n",
+    "        sample_point_size=None,\n",
+    "    );\n",
     "    axs[i].set_title(titles[i]);"
    ]
   },
@@ -1342,6 +1381,7 @@
  ],
  "metadata": {
   "jupytext": {
+   "custom_cell_magics": "kql",
    "formats": "ipynb,py:percent"
   },
   "kernelspec": {
