Move centered_subplots() to utils/plotting

--- a/code/Gaussian_mixture.ipynb
+++ b/code/Gaussian_mixture.ipynb
@@ -30,7 +30,7 @@
     "from stein_thinning.stein import kmat\n",
     "\n",
     "from utils.mvn import make_mvn_mixture\n",
-    "from utils.plotting import highlight_points, plot_density"
+    "from utils.plotting import centered_subplots, highlight_points, plot_density"
    ]
   },
   {
@@ -904,35 +904,6 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "09ee66a1-b12a-45c0-af7a-71245cb7bf0e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def centered_subplots(fig, rows):\n",
-    "    # https://stackoverflow.com/questions/53361373/center-the-third-subplot-in-the-middle-of-second-row-python\n",
-    "    grid_dim = max(rows)\n",
-    "    grid_shape = (len(rows), 2 * grid_dim)\n",
-    "  \n",
-    "    axs = []\n",
-    "    \n",
-    "    jrow = 0\n",
-    "    for row in rows:\n",
-    "        offset = 0\n",
-    "        for i in range(row):\n",
-    "            if row < grid_dim:\n",
-    "                offset = grid_dim - row\n",
-    "            ax_position = (jrow, 2 * i + offset)\n",
-    "            ax = plt.subplot2grid(grid_shape, ax_position, fig=fig, colspan=2)\n",
-    "            axs.append(ax)\n",
-    "            \n",
-    "        jrow += 1\n",
-    "        \n",
-    "    return axs"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
    "id": "db4f817d-481e-48f8-b00f-b122035206c1",
    "metadata": {},
    "outputs": [
@@ -985,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 44,
    "id": "4d98f84b-5dec-45ea-8748-0de93b5f7638",
    "metadata": {},
    "outputs": [
@@ -1001,7 +972,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1020,7 +991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "id": "c4f99a59-c696-4b58-828b-e8dff1cabd4b",
    "metadata": {},
    "outputs": [],
@@ -1030,7 +1001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 46,
    "id": "33005d58-1cc8-4b71-85c0-a40bf4a3a738",
    "metadata": {},
    "outputs": [
@@ -1046,7 +1017,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1065,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 47,
    "id": "32a0af6c-ce05-4bd2-84f3-3243bc0696ed",
    "metadata": {},
    "outputs": [],
@@ -1075,7 +1046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 48,
    "id": "c3a1d95e-c559-42ab-9795-20f7b9d4aca9",
    "metadata": {},
    "outputs": [],
@@ -1089,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 49,
    "id": "76116ae5-ef5a-4fce-873d-425fe1728212",
    "metadata": {},
    "outputs": [
@@ -1097,8 +1068,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 29 s, sys: 2.18 s, total: 31.2 s\n",
-      "Wall time: 31.6 s\n"
+      "CPU times: user 29 s, sys: 2.55 s, total: 31.6 s\n",
+      "Wall time: 32 s\n"
      ]
     }
    ],
@@ -1112,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 50,
    "id": "54d5bd6a-9da6-4d1c-9b7f-ca974f53ddea",
    "metadata": {},
    "outputs": [
@@ -1157,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "id": "a2d7ae1e-29a2-4097-a1aa-23330dc62b9a",
    "metadata": {},
    "outputs": [
@@ -1200,7 +1171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 52,
    "id": "cb65c087-7f4d-45bd-956c-024404efe3f5",
    "metadata": {},
    "outputs": [
@@ -1239,7 +1210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 53,
    "id": "a2d651cb-f760-4cfb-b313-3f93bbc4ec17",
    "metadata": {},
    "outputs": [],
@@ -1251,7 +1222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "id": "a6539b53-cf47-491e-afdb-bd25ef1d32d9",
    "metadata": {},
    "outputs": [],
@@ -1262,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 55,
    "id": "3fc1f4cd-5266-4bf3-a486-f8f7c8d4567e",
    "metadata": {},
    "outputs": [
@@ -1302,7 +1273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 56,
    "id": "262f29ab-3365-407a-abcf-cc02189e7c1d",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 57,
    "id": "a5fb1440-a7bd-4e55-93d8-abbcd58aa403",
    "metadata": {},
    "outputs": [
