Better sizing of energy distance plots

--- a/report/main.tex
+++ b/report/main.tex
@@ -628,7 +628,7 @@ Echoing the observations from the preceding section, we conclude that a good cho
 
 This dissertation makes two contributions:
 \begin{itemize}
-\item Implementation of the gradient-free thinning integrated into the Python library \texttt{stein-thinning}.
+\item Implementation of the gradient-free thinning added into the Python library \texttt{stein-thinning}.
 \item Evaluation of the performance of the proposed approach for a Gaussian mixture and the Lotka-Volterra inverse problem.
 \end{itemize}
 
