Ability to include coversheet in the report

--- a/report/main.tex
+++ b/report/main.tex
@@ -13,6 +13,7 @@
 \usepackage{graphicx}
 \usepackage{svg}
 \usepackage{tabularx}
+\usepackage{pdfpages}
 
 \usepackage{geometry}
 \geometry{margin=2cm}
@@ -32,6 +33,9 @@
 
 \date{}
 \begin{document}
+
+%\includepdf[pages=-]{Coversheet.pdf}
+
 \newgeometry{top=8cm}
 
 \thispagestyle{empty}
